style.css
* {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

body {
    background-image: url("inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg") ;
}

h1 {
    color: #d99d29; 
    text-align: center;
    font-size: 64px;
    font-style: italic;
    text-shadow: 0px 0px 30px black;
    margin-bottom: 20px;

}


button {
    padding: 6px 8px;
    border-radius: 10px;
    background-color: #f7e7c6;
}


button:hover {
    background-color: #2e2b26;
    color: #f7e7c6;
}


h1 + button {
    padding: 10px 100px;
    color: #f7e7c6;
    background-color: #2e2b26;
 }


 h1 + button:hover {
    background-color: #f7e7c6;
    color: #2e2b26;
 }


 footer {
    color: #f7e7c6;
    margin-top: 50px;
 }

 footer a {
    color: #f7e7c6;
 }
 

.flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 30px;
}

#container {
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}


#container div {
    border-left: 8px black;
    border-style: double;
    padding: 20px;
    text-align: center;
    width: 250px;
    height: 300px;
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.61);
    border-radius: 0px 5px 5px 0px;
  /* background-color: #f2dcb1; */
  background: rgb(220,137,32);
background: linear-gradient(90deg, rgba(220,137,32,1) 0%, rgba(217,157,41,1) 5%, rgba(242,220,177,1) 95%);

}


#modal {
    background-color: #f7e7c6;
    border-radius: 10px;
}


.switch {
    position: relative;
    margin: 20px auto;
    display: block;
    width: 74px;
    height: 26px;
    text-align: center;
    
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #dc8920;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    font-size: 12px;
    content: 'No';
    align-content: center;
    height: 18px;
    width: fit-content;
    padding: 0px 4px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}


input:checked + .slider {
background-color: #8da683; 

}

input:checked + .slider:before {
    -webkit-transform: translateX(36px);
    -ms-transform: translateX(36px);
    transform: translateX(38px);
    content: 'Yes';
    padding: 0px 4px;
    width: fit-content;
}

input:focus + .slider {
    box-shadow: 0 0 1px #8da683;
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

